=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.06 - In Development

=over

Per user requests, changed default sort order for Find Story 
and Find Media interfaces (toplevel screens and StoryLink/MediaLink 
screens) to descending ID (instead of ascending ID) so newest items 
are visible on the first page. [Noam Weinstein]

=over

Fixed issue (discovered by Dave Kaufman) where Media and Category Edit 
screens contained duplicate "Done With" & "Delete" buttons when editing
containers, and -- in the case of Category -- the inner "Done With"
was failing. (The above issues appear to have been caused by 
ElementEditor.tmpl being changed without all of the templates that include 
ElementEditor.tmpl being updated.) Also renamed the top-level (big green)
"Delete" buttons on Edit screens "Delete Story", "Delete Media", "Delete 
Category", and "Delete Template" since top-level objects are being
accidentally deleted from within containers by users who are intending
to delete only the container. Finally, added upward arrow to the right 
of innermost "Delete" on Edit screens in order to differentiate THIS 
delete (which operates on the sub-elements above it) from the other two! 
[Noam Weinstein]

=item *

Made ElementEditor's "Find Story" GUI remember (within a session) 
previous selections for search string (simple search), and category, class, 
contrib, cover_date, publish_date, story_id, title and url (advanced
search). [Noam Weinstein]

=item *

Added Fedora 11 as a build platform. [Michael Peters]

=item *

Fixed bug in Widget module where improperly formatted date strings 
in Date Chooser threw an ISE instead of failing gracefully like 
DateTime Chooser. [Noam Weinstein]

=item *

Media bulk uploads now try to guess the media_type based on the file 
extension. [Michael Peters]

=item *

Now save and display text media object (HTML, CSS, etc) with the same